--- a/src/app/components/display/display.component.html
+++ b/src/app/components/display/display.component.html
@@ -1,8 +1,8 @@
 <md-card>
     <md-card-header>
-        <md-card-title>Type</md-card-title>
+        <md-card-title>Type: {{measurementType}}</md-card-title>
     </md-card-header>
     <md-card-content class="content">
-        <span class="num">{{measurement}}</span>
+        <span class="num">{{measurementValue}}</span>
     </md-card-content>
 </md-card>
