--- a/src/app/components/control-panel/control-panel.component.html
+++ b/src/app/components/control-panel/control-panel.component.html
@@ -3,5 +3,5 @@
     <label class="blue"><input type="radio" (change)="measure('ac')" name="toggle"><span class="flaticon-supply"></span></label>
     <label class="blue"><input type="radio" (change)="measure('resistance')" name="toggle"><span class="flaticon-resistor-1"></span></label>
     <label class="blue"><input type="radio" (change)="measure('capacitance')" name="toggle"><span class="flaticon-capacitor"></span></label>
-    <label class="blue"><input type="radio" (change)="measure('frequency')" name="toggle"><span class="flaticon-antenna"></span></label>
+    <label class="blue"><input type="radio" (change)="measure('temperature')" name="toggle"><span class="mdi mdi-thermometer"></span></label>
 </div>
