--- a/src/app/components/control-panel/control-panel.component.css
+++ b/src/app/components/control-panel/control-panel.component.css
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    height: 74px
 }
 
 #toggle-group label {
@@ -47,6 +48,7 @@
     background-color: #FFF;
     color: #3F51B5;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    height: 64px;
 }
 
 #toggle-group .blue:hover {
@@ -54,10 +56,19 @@
 }
 
 [class^="flaticon-"]:before,
-[class*=" flaticon-"]:before {
+[class*=" flaticon-"]:before,
+.mdi:before {
     margin-left: 0;
     font-size: 40px;
     font-weight: 800;
+}
+
+.mat-toolbar-row {
+    height: 40px;
+}
+
+.mat-toolbar {
+    min-height: 40px;
 }
 
 #toggle-group .blue:active {
