--- a/src/app/components/display/display.component.css
+++ b/src/app/components/display/display.component.css
@@ -3,7 +3,7 @@
 }
 
 .num {
-    font-size:48px;
+    font-size: 48px;
     color: #3F51B5;
 }
 
@@ -13,15 +13,20 @@
 
 .mat-card {
     min-width: 120px;
-    padding: 5px 24px;
+    padding: 5px;
 }
 
 .mat-card-header {
     margin: 0;
     color: #3F51B5;
-    height: 20px;
+    height: 28px;
 }
 
 .mat-card-content {
     min-height: 80px;
+}
+
+.mat-card-header-text {
+    height: 40px;
+    margin: 0 11px;
 }
