--- a/src/app/components/display/display.component.html
+++ b/src/app/components/display/display.component.html
@@ -1,6 +1,6 @@
 <md-card>
     <md-card-header>
-        <md-card-title>Type: {{measurementType}}</md-card-title>
+        <md-card-title>{{measurementType}}</md-card-title>
     </md-card-header>
     <md-card-content class="content">
         <span class="num">{{measurementValue}}</span>
