--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import '~@angular/material/core/theming/prebuilt/indigo-pink.css';
 body {
     font-family: Roboto, Arial, sans-serif;
+    margin: 0;
 }
